# aggregator

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/managers/: mongo_manager.py
src/repositories/: interfaces.py  payments.py
src/routers/: init.py  routers.py
src/routers/v1/: aggregation.py  routers.py
src/services/: aggregation.py  interfaces.py
src/utils/: config.py  date.py
