[tool.poetry]
name = "aggregator"
version = "0.1.0"
description = ""
authors = ["NistsiukAlexandr <nistsiuk.aliaksandr@pynest.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
pymongo = "^4.6.3"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
