[tool.poetry]
name = "aggregator"
version = "0.1.0"
description = ""
authors = ["NistsiukAlexandr <nistsiuk.aliaksandr@pynest.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
aiogram = "^3.4.1"
motor = "^3.4.0"
bson = "^0.5.10"
pymongo = "^4.6.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
